12237 zpool coredump, vdev_open() returns EDOM with disk image file (but not zvol) from bhyve Reviewed by: Andy Fiddaman <illumos@fiddaman.net> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>